Tweak image and alt text [#177871710]

--- a/installing.html.md.erb
+++ b/installing.html.md.erb
@@ -239,7 +239,7 @@ Follow the steps below to configure settings for <%= vars.product_short %> email
 To verify that you have the correct stemcell version for the <%= vars.product_full %> tile:
 
 1. From the <%= vars.ops_manager %> Installation Dashboard, click **Stemcell Library**.
-    ![Screenshot of the Stemcell Library. The second row contains the Event Alerts product.](images/stemcell-library-xenial.png)
+    ![Screenshot of Ops Manager. The stemcell library button is the second link in the header.](images/stemcell-library-xenial.png)
 
 1. Verify the settings. If <%= vars.product_short %> cannot detect a stemcell TGZ file,
 a message similar to "No compatible stemcell available" appears. To upload a stemcell, do the following:
