--- a/troubleshooting.html.md.erb
+++ b/troubleshooting.html.md.erb
@@ -107,7 +107,7 @@ This section provides information about how to troubleshooting specific errors o
           Do one of the following:
           <ul>
             <li>
-              In the database, disable binary logging.
+              In the database, deactivate binary logging.
               For information, see the
               <a href="https://dev.mysql.com/doc/refman/en/binary-log.html">open source MySQL documentation</a>
             </li>
