--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -167,8 +167,8 @@ New features and changes in this release:
 For more information about configuring proxy settings, see [Configuring Proxy Settings for All Applications
 ](https://docs.pivotal.io/pivotalcf/opsguide/config-proxy.html).
 * Improves log error messages when alerts fail to send.
-* Adds option to disable Metrics Forwarder integration.
-* Adds support for disabling SMTP TLS. For more information, see [Configure Email Notifications](./installing.html#email_settings)
+* Adds option to deactivate Metrics Forwarder integration.
+* Adds support for deactivating SMTP TLS. For more information, see [Configure Email Notifications](./installing.html#email_settings)
 * If you subscribed to `-all` topics, you can selectively unsubscribe from individual topics.
 You can also selectively subscribe to individual topics.
 For more information, see [Unsubscribe from Alert Topics](./using.html#unsubscribe_topics)
